force-app/main/default/objects/Service_Profile__c/Service_Profile__c.object-meta.xml
<CustomObject>
    <label>Service Profile</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Service Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>