force-app/main/default/objects/Service_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Profiles</relationshipLabel>
    <relationshipName>Service_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>