force-app/main/default/objects/Service_Profile__c/fields/CL_Air_Freshener_Install__c.field-meta.xml
<CustomField>
    <fullName>CL_Air_Freshener_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Freshener Install</label>
    <type>Checkbox</type>
</CustomField>