force-app/main/default/objects/Service_Profile__c/fields/CL_Carpet_Cleaner_Shampooer__c.field-meta.xml
<CustomField>
    <fullName>CL_Carpet_Cleaner_Shampooer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carpet Cleaner / Shampooer</label>
    <type>Checkbox</type>
</CustomField>