force-app/main/default/objects/Service_Profile__c/fields/CL_Cleaning_Top_Behind_Fridges__c.field-meta.xml
<CustomField>
    <fullName>CL_Cleaning_Top_Behind_Fridges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleaning Top/Behind Fridges</label>
    <type>Checkbox</type>
</CustomField>