force-app/main/default/objects/Service_Profile__c/fields/CL_Cleans_Winterized_Properties__c.field-meta.xml
<CustomField>
    <fullName>CL_Cleans_Winterized_Properties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleans Winterized Properties</label>
    <type>Checkbox</type>
</CustomField>