force-app/main/default/objects/Service_Profile__c/fields/CL_Exterior_Window_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>CL_Exterior_Window_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exterior Window Cleaning</label>
    <type>Checkbox</type>
</CustomField>