force-app/main/default/objects/Service_Profile__c/fields/CL_Garage_Sweeps__c.field-meta.xml
<CustomField>
    <fullName>CL_Garage_Sweeps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Sweeps</label>
    <type>Checkbox</type>
</CustomField>