force-app/main/default/objects/Service_Profile__c/fields/CL_House_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>CL_House_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>House Cleaning</label>
    <type>Checkbox</type>
</CustomField>