force-app/main/default/objects/Service_Profile__c/fields/CL_Ladder__c.field-meta.xml
<CustomField>
    <fullName>CL_Ladder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ladder</label>
    <type>Checkbox</type>
</CustomField>