force-app/main/default/objects/Service_Profile__c/fields/CL_Light_Clean__c.field-meta.xml
<CustomField>
    <fullName>CL_Light_Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Light Clean</label>
    <type>Checkbox</type>
</CustomField>