force-app/main/default/objects/Service_Profile__c/fields/CL_Odor_Control_Removal__c.field-meta.xml
<CustomField>
    <fullName>CL_Odor_Control_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Odor Control / Removal</label>
    <type>Checkbox</type>
</CustomField>