force-app/main/default/objects/Service_Profile__c/fields/CL_Performs_Carpet_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>CL_Performs_Carpet_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performs Carpet Cleaning</label>
    <type>Checkbox</type>
</CustomField>