force-app/main/default/objects/Service_Profile__c/fields/CL_Post_Construction_Trash_Out__c.field-meta.xml
<CustomField>
    <fullName>CL_Post_Construction_Trash_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Construction / Trash Out</label>
    <type>Checkbox</type>
</CustomField>