force-app/main/default/objects/Service_Profile__c/fields/CL_Power_Source__c.field-meta.xml
<CustomField>
    <fullName>CL_Power_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power Source</label>
    <type>Checkbox</type>
</CustomField>