force-app/main/default/objects/Service_Profile__c/fields/CL_Smart_Phone__c.field-meta.xml
<CustomField>
    <fullName>CL_Smart_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smart Phone</label>
    <type>Checkbox</type>
</CustomField>