force-app/main/default/objects/Service_Profile__c/fields/CL_Smoke_Detector_Battery_Replacement__c.field-meta.xml
<CustomField>
    <fullName>CL_Smoke_Detector_Battery_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoke Detector Battery Replacement</label>
    <type>Checkbox</type>
</CustomField>