force-app/main/default/objects/Service_Profile__c/fields/CL_Steam_Cleaner__c.field-meta.xml
<CustomField>
    <fullName>CL_Steam_Cleaner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Steam Cleaner</label>
    <type>Checkbox</type>
</CustomField>