force-app/main/default/objects/Service_Profile__c/fields/CL_Turn_Clean__c.field-meta.xml
<CustomField>
    <fullName>CL_Turn_Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn Clean</label>
    <type>Checkbox</type>
</CustomField>