force-app/main/default/objects/Service_Profile__c/fields/CL_Unfinished_Basement_Sweeps__c.field-meta.xml
<CustomField>
    <fullName>CL_Unfinished_Basement_Sweeps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unfinished Basement Sweeps</label>
    <type>Checkbox</type>
</CustomField>