force-app/main/default/objects/Service_Profile__c/fields/Contractor_Recruitment_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Recruitment_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contractor Recruitment Profile</label>
    <referenceTo>Contractor_Recruitment__c</referenceTo>
    <relationshipLabel>Service Profiles</relationshipLabel>
    <relationshipName>Service_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>