force-app/main/default/objects/Service_Profile__c/fields/Daily_Gross_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Daily_Gross_Earnings__c</fullName>
    <label>Daily Gross Earnings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>