force-app/main/default/objects/Service_Profile__c/fields/Daily_Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Daily_Max_Capacity__c</fullName>
    <label>Daily Max Capacity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>