force-app/main/default/objects/Service_Profile__c/fields/GEN_Contractor_Able_to_adjust_schedule__c.field-meta.xml
<CustomField>
    <fullName>GEN_Contractor_Able_to_adjust_schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor Able to adjust schedule</label>
    <type>Checkbox</type>
</CustomField>