force-app/main/default/objects/Service_Profile__c/fields/GEN_Description_of_Rates_Outside_of_TE__c.field-meta.xml
<CustomField>
    <fullName>GEN_Description_of_Rates_Outside_of_TE__c</fullName>
    <label>Description of Rates Outside of TE</label>
    <type>TextArea</type>
</CustomField>