force-app/main/default/objects/Service_Profile__c/fields/GEN_End_Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>GEN_End_Hours_of_Operation__c</fullName>
    <label>End Hours of Operation</label>
    <type>Time</type>
</CustomField>