force-app/main/default/objects/Service_Profile__c/fields/GEN_Has_Own_Book_of_Business__c.field-meta.xml
<CustomField>
    <fullName>GEN_Has_Own_Book_of_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Own Book of Business</label>
    <type>Checkbox</type>
</CustomField>