force-app/main/default/objects/Service_Profile__c/fields/GEN_Other_Equipment__c.field-meta.xml
<CustomField>
    <fullName>GEN_Other_Equipment__c</fullName>
    <label>Other Equipment</label>
    <type>TextArea</type>
</CustomField>