force-app/main/default/objects/Service_Profile__c/fields/GEN_Starting_Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>GEN_Starting_Hours_of_Operation__c</fullName>
    <label>Starting Hours of Operation</label>
    <type>Time</type>
</CustomField>