force-app/main/default/objects/Service_Profile__c/fields/GEN_TE_Volume_Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>GEN_TE_Volume_Capacity_Hours__c</fullName>
    <label>TE Volume Capacity (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>