force-app/main/default/objects/Service_Profile__c/fields/GEN_Types_of_Products_Brands_Used__c.field-meta.xml
<CustomField>
    <fullName>GEN_Types_of_Products_Brands_Used__c</fullName>
    <label>Types of Products / Brands Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>