force-app/main/default/objects/Service_Profile__c/fields/GEN_Typical_Scope__c.field-meta.xml
<CustomField>
    <fullName>GEN_Typical_Scope__c</fullName>
    <label>Typical Scope</label>
    <length>80</length>
    <type>Text</type>
</CustomField>