force-app/main/default/objects/Service_Profile__c/fields/GEN_Works_Weekends__c.field-meta.xml
<CustomField>
    <fullName>GEN_Works_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Works Weekends</label>
    <type>Checkbox</type>
</CustomField>