force-app/main/default/objects/Service_Profile__c/fields/GEN_Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>GEN_Years_of_Experience__c</fullName>
    <label>Years of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>