force-app/main/default/objects/Service_Profile__c/fields/LS_Aeration__c.field-meta.xml
<CustomField>
    <fullName>LS_Aeration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aeration</label>
    <type>Checkbox</type>
</CustomField>