force-app/main/default/objects/Service_Profile__c/fields/LS_Bulk_Mulch__c.field-meta.xml
<CustomField>
    <fullName>LS_Bulk_Mulch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bulk Installation of Mulch on a Truck or Trailer Load basis</inlineHelpText>
    <label>Bulk Mulch</label>
    <type>Checkbox</type>
</CustomField>