force-app/main/default/objects/Service_Profile__c/fields/LS_Bush_Trimming__c.field-meta.xml
<CustomField>
    <fullName>LS_Bush_Trimming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bush Trimming</label>
    <type>Checkbox</type>
</CustomField>