force-app/main/default/objects/Service_Profile__c/fields/LS_Debris_Trash_Removal__c.field-meta.xml
<CustomField>
    <fullName>LS_Debris_Trash_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debris &amp; Trash Removal</label>
    <type>Checkbox</type>
</CustomField>