force-app/main/default/objects/Service_Profile__c/fields/LS_Desertscaping__c.field-meta.xml
<CustomField>
    <fullName>LS_Desertscaping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desertscaping</label>
    <type>Checkbox</type>
</CustomField>