force-app/main/default/objects/Service_Profile__c/fields/LS_Edger__c.field-meta.xml
<CustomField>
    <fullName>LS_Edger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edger</label>
    <type>Checkbox</type>
</CustomField>