force-app/main/default/objects/Service_Profile__c/fields/LS_Fertilization__c.field-meta.xml
<CustomField>
    <fullName>LS_Fertilization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fertilization</label>
    <type>Checkbox</type>
</CustomField>