force-app/main/default/objects/Service_Profile__c/fields/LS_Gutter_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>LS_Gutter_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gutter Cleaning</label>
    <type>Checkbox</type>
</CustomField>