force-app/main/default/objects/Service_Profile__c/fields/LS_Lawn_Mowing__c.field-meta.xml
<CustomField>
    <fullName>LS_Lawn_Mowing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lawn Mowing</label>
    <type>Checkbox</type>
</CustomField>