force-app/main/default/objects/Service_Profile__c/fields/LS_Leaf_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>LS_Leaf_Cleanup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leaf Cleanup</label>
    <type>Checkbox</type>
</CustomField>