force-app/main/default/objects/Service_Profile__c/fields/LS_Mulch__c.field-meta.xml
<CustomField>
    <fullName>LS_Mulch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mulch Installation on per bag basis</inlineHelpText>
    <label>Mulch</label>
    <type>Checkbox</type>
</CustomField>