force-app/main/default/objects/Service_Profile__c/fields/LS_Mulch_Installation_Refresh__c.field-meta.xml
<CustomField>
    <fullName>LS_Mulch_Installation_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mulch Installation/Refresh</label>
    <type>Checkbox</type>
</CustomField>