force-app/main/default/objects/Service_Profile__c/fields/LS_Pressure_Washing__c.field-meta.xml
<CustomField>
    <fullName>LS_Pressure_Washing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Pool Service and Lawn Service</description>
    <label>Pressure Washing</label>
    <type>Checkbox</type>
</CustomField>