force-app/main/default/objects/Service_Profile__c/fields/LS_Sod_Installation__c.field-meta.xml
<CustomField>
    <fullName>LS_Sod_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sod Installation</label>
    <type>Checkbox</type>
</CustomField>