force-app/main/default/objects/Service_Profile__c/fields/LS_Spring_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>LS_Spring_Cleanup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spring Cleanup</label>
    <type>Checkbox</type>
</CustomField>