force-app/main/default/objects/Service_Profile__c/fields/LS_Sprinkler_Repair__c.field-meta.xml
<CustomField>
    <fullName>LS_Sprinkler_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sprinkler Repair</label>
    <type>Checkbox</type>
</CustomField>