force-app/main/default/objects/Service_Profile__c/fields/LS_Sprinkler_Winterization__c.field-meta.xml
<CustomField>
    <fullName>LS_Sprinkler_Winterization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sprinkler Winterization</label>
    <type>Checkbox</type>
</CustomField>