force-app/main/default/objects/Service_Profile__c/fields/LS_Tree_Removal__c.field-meta.xml
<CustomField>
    <fullName>LS_Tree_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tree Removal</label>
    <type>Checkbox</type>
</CustomField>