force-app/main/default/objects/Service_Profile__c/fields/LS_Weed_Application_Removal__c.field-meta.xml
<CustomField>
    <fullName>LS_Weed_Application_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weed Application / Removal</label>
    <type>Checkbox</type>
</CustomField>