force-app/main/default/objects/Service_Profile__c/fields/PS_Acid_Washing__c.field-meta.xml
<CustomField>
    <fullName>PS_Acid_Washing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service profile</description>
    <label>Acid Washing</label>
    <type>Checkbox</type>
</CustomField>