force-app/main/default/objects/Service_Profile__c/fields/PS_Auto_Chlorinator_Repair_Replacement__c.field-meta.xml
<CustomField>
    <fullName>PS_Auto_Chlorinator_Repair_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Auto Chlorinator Repair &amp; Replacement</label>
    <type>Checkbox</type>
</CustomField>