force-app/main/default/objects/Service_Profile__c/fields/PS_Brush_for_Pool_Walls_and_Floors__c.field-meta.xml
<CustomField>
    <fullName>PS_Brush_for_Pool_Walls_and_Floors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for Pool service</description>
    <label>Brush for Pool Walls and Floors</label>
    <type>Checkbox</type>
</CustomField>