force-app/main/default/objects/Service_Profile__c/fields/PS_Chemical_Testing_Kit__c.field-meta.xml
<CustomField>
    <fullName>PS_Chemical_Testing_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for Pool Service</description>
    <label>Chemical Testing Kit</label>
    <type>Checkbox</type>
</CustomField>