force-app/main/default/objects/Service_Profile__c/fields/PS_Chips_Crack_Repair__c.field-meta.xml
<CustomField>
    <fullName>PS_Chips_Crack_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Chips &amp; Crack Repair</label>
    <type>Checkbox</type>
</CustomField>