force-app/main/default/objects/Service_Profile__c/fields/PS_Concrete_Repair__c.field-meta.xml
<CustomField>
    <fullName>PS_Concrete_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Concrete Repair</label>
    <type>Checkbox</type>
</CustomField>