force-app/main/default/objects/Service_Profile__c/fields/PS_Filter_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>PS_Filter_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Filter Cleaning</label>
    <type>Checkbox</type>
</CustomField>