force-app/main/default/objects/Service_Profile__c/fields/PS_Filter_Repairs_or_Replacement__c.field-meta.xml
<CustomField>
    <fullName>PS_Filter_Repairs_or_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Filter Repairs or Replacement</label>
    <type>Checkbox</type>
</CustomField>