force-app/main/default/objects/Service_Profile__c/fields/PS_Heater_Repairs_and_Replacement__c.field-meta.xml
<CustomField>
    <fullName>PS_Heater_Repairs_and_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Heater Repairs and Replacement</label>
    <type>Checkbox</type>
</CustomField>