force-app/main/default/objects/Service_Profile__c/fields/PS_Hot_Tubs__c.field-meta.xml
<CustomField>
    <fullName>PS_Hot_Tubs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Hot Tubs</label>
    <type>Checkbox</type>
</CustomField>