force-app/main/default/objects/Service_Profile__c/fields/PS_Leak_Detection__c.field-meta.xml
<CustomField>
    <fullName>PS_Leak_Detection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool service</description>
    <label>Leak Detection</label>
    <type>Checkbox</type>
</CustomField>