force-app/main/default/objects/Service_Profile__c/fields/PS_Licenses_or_Certifications__c.field-meta.xml
<CustomField>
    <fullName>PS_Licenses_or_Certifications__c</fullName>
    <description>Used for Pool Services</description>
    <label>Licenses or Certifications</label>
    <type>TextArea</type>
</CustomField>