force-app/main/default/objects/Service_Profile__c/fields/PS_Motor_Replacements__c.field-meta.xml
<CustomField>
    <fullName>PS_Motor_Replacements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Motor Replacements</label>
    <type>Checkbox</type>
</CustomField>