force-app/main/default/objects/Service_Profile__c/fields/PS_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>PS_Plumbing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Plumbing</label>
    <type>Checkbox</type>
</CustomField>