force-app/main/default/objects/Service_Profile__c/fields/PS_Pool_Cleaner_Repairs_or_Replacement__c.field-meta.xml
<CustomField>
    <fullName>PS_Pool_Cleaner_Repairs_or_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for pool Service</description>
    <label>Pool Cleaner Repairs or Replacement</label>
    <type>Checkbox</type>
</CustomField>