force-app/main/default/objects/Service_Profile__c/fields/PS_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>PS_Service_Area__c</fullName>
    <description>Field used for Pool Service</description>
    <label>Service Area</label>
    <type>TextArea</type>
</CustomField>