force-app/main/default/objects/Service_Profile__c/fields/PS_Skimmer__c.field-meta.xml
<CustomField>
    <fullName>PS_Skimmer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for Pool Service</description>
    <label>Skimmer</label>
    <type>Checkbox</type>
</CustomField>