force-app/main/default/objects/Service_Profile__c/fields/PS_Suction_Leaks__c.field-meta.xml
<CustomField>
    <fullName>PS_Suction_Leaks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Pool Service</description>
    <label>Suction Leaks</label>
    <type>Checkbox</type>
</CustomField>