force-app/main/default/objects/Service_Profile__c/fields/PS_Vacuum__c.field-meta.xml
<CustomField>
    <fullName>PS_Vacuum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pool Service Field</description>
    <label>Vacuum</label>
    <type>Checkbox</type>
</CustomField>