force-app/main/default/objects/Service_Profile__c/fields/Record_Type_ID_Custom__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID_Custom__c</fullName>
    <defaultValue>$RecordType.Id</defaultValue>
    <description>Default value of the record type. Used with matching rules to prevent duplicates.</description>
    <label>Record Type ID (Text)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>