force-app/main/default/objects/Service_Profile__c/fields/Service_Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Profile_Status__c</fullName>
    <description>The status of the service profile related to the contractor.</description>
    <inlineHelpText>The status of the service profile related to the contractor.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>